==> ravibhagavandas/amazon-freertos/vendors/nuvoton/boards/numaker_iot_m487_wifi/ports/wifi/iot_wifi.c <==
#include "FreeRTOS.h"
#include "semphr.h"
#include "task.h"
#include "iot_wifi.h"
#include "aws_wifi_config.h"
#include "esp8266_wifi.h"
#define ESP_UART            UART1;
#define ESP_UART_IRQ        UART1_IRQn;
#define ESP_UART_BAUDRATE   115200;
#define ESP_TIMEOUT_IN_MS   20000;

WIFIReturnCode_t WIFI_On( void )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if (xWIFI_IsInitialized == pdFALSE) {
        static StaticSemaphore_t xSemaphoreBuffer;

        memset(&xNuWiFi, 0, sizeof(xNuWiFi));

        /* Create the sync semaphore for Wi-Fi module operations */
        xNuWiFi.xWifiSem = xSemaphoreCreateMutexStatic(&xSemaphoreBuffer);
        /* Initialize semaphore */
        xSemaphoreGive(xNuWiFi.xWifiSem);

        xNuWiFi.xWifiObject.Uart = ESP_UART;
        xNuWiFi.xWifiObject.UartIrq = ESP_UART_IRQ;
        xNuWiFi.xWifiObject.UartBaudRate = ESP_UART_BAUDRATE;
        xNuWiFi.xWifiObject.Timeout = ESP_TIMEOUT_IN_MS;
        xNuWiFi.xWifiObject.IsMultiConn = pdFALSE;
        xNuWiFi.xWifiObject.ActiveCmd = CMD_NONE;

        xWIFI_IsInitialized = pdTRUE;
    }

    /* Initialize Wi-Fi module */
    if (ESP_WIFI_Init(&xNuWiFi.xWifiObject) == ESP_WIFI_STATUS_OK) {
        xWiFiRet = eWiFiSuccess;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;
    uint32_t i;

    if (pxNetworkParams == NULL || pxNetworkParams->ucSSIDLength == 0 || 
        (pxNetworkParams->xSecurity != eWiFiSecurityOpen && pxNetworkParams->xPassword.xWPA.ucLength == 0)) {
        return xWiFiRet;
    }

    configPRINTF(("current task name is \"%s\"\n", pcTaskGetName(xTaskGetCurrentTaskHandle())));
    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        /* Disconnect first if the network is connected */
        if (ESP_WIFI_IsConnected(&xNuWiFi.xWifiObject)) {
            if (ESP_WIFI_Disconnect(&xNuWiFi.xWifiObject) == ESP_WIFI_STATUS_OK) {
                xWiFiRet = eWiFiSuccess;
            }
        } else {
            xWiFiRet = eWiFiSuccess;
        }

        if (xWiFiRet == eWiFiSuccess) {
            xWiFiRet = eWiFiFailure;

						char pcSSID[ pxNetworkParams->ucSSIDLength + 1];
						char pcPassword [ pxNetworkParams->xPassword.xWPA.ucLength + 1 ];
						prvByteArrayToString( pcSSID, 
																	pxNetworkParams->ucSSID, 
																	pxNetworkParams->ucSSIDLength, 
																	wificonfigMAX_SSID_LEN );
						prvByteArrayToString( pcPassword, 
																	pxNetworkParams->xPassword.xWPA.cPassphrase, 
																	pxNetworkParams->xPassword.xWPA.ucLength, 
																	wificonfigMAX_PASSPHRASE_LEN );
            for (i = 0 ; i < wificonfigNUM_CONNECTION_RETRY ; i++) {
                /* Connect to AP */
                if (ESP_WIFI_Connect(&xNuWiFi.xWifiObject, pcSSID, pcPassword) == ESP_WIFI_STATUS_OK) {
                    /* Store network settings. */
                    if (ESP_WIFI_GetNetStatus(&xNuWiFi.xWifiObject) == ESP_WIFI_STATUS_OK) {
												memcpy( pcConnectedSSID, pcSSID, strlen( pcSSID ) + 1);
                        xWiFiRet = eWiFiSuccess;
                        break;
                    }
                }
            }
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_Disconnect( void )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks ) == pdTRUE) {
        if (ESP_WIFI_Disconnect(&xNuWiFi.xWifiObject) == ESP_WIFI_STATUS_OK) {
            xWiFiRet = eWiFiSuccess;
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer, uint8_t ucNumNetworks )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if (pxBuffer == NULL) {
        return xWiFiRet;
    }

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        if (ESP_WIFI_Scan(&xNuWiFi.xWifiObject, pxBuffer, ucNumNetworks) == ESP_WIFI_STATUS_OK) {
            xWiFiRet = eWiFiSuccess;
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_GetIPInfo( WIFIIPConfiguration_t * pxIPConfig )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if ( pxIPConfig == NULL) {
        return xWiFiRet;
    }

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        if (xNuWiFi.xWifiObject.IsConnected == pdTRUE) {
            pxIPConfig->xIPAddress.ulAddress[ 0 ] = ( ( xNuWiFi.xWifiObject.StaIpAddr[ 0 ] << 24 )
                                                      | ( xNuWiFi.xWifiObject.StaIpAddr[ 1 ] << 16 )
                                                      | ( xNuWiFi.xWifiObject.StaIpAddr[ 2 ] << 8 )
                                                      | ( xNuWiFi.xWifiObject.StaIpAddr[ 3 ] << 0 ) ) ;
            xWiFiRet = eWiFiSuccess;
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if (pucMac == NULL) {
        return xWiFiRet;
    }

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        if (xNuWiFi.xWifiObject.IsConnected == pdTRUE) {
            memcpy(pucMac, xNuWiFi.xWifiObject.StaMacAddr, 6);
            xWiFiRet = eWiFiSuccess;
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

WIFIReturnCode_t WIFI_GetHostIP( char * pcHost, uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xWiFiRet = eWiFiFailure;

    if (pcHost == NULL || pucIPAddr == NULL) {
        return xWiFiRet;
    }

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        if (ESP_WIFI_GetHostIP(&xNuWiFi.xWifiObject, pcHost, pucIPAddr) == ESP_WIFI_STATUS_OK) {
            xWiFiRet = eWiFiSuccess;
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    } else {
        xWiFiRet = eWiFiTimeout;
    }

    return xWiFiRet;
}

BaseType_t WIFI_IsConnected( const WIFINetworkParams_t * pxNetworkParams )
{
    BaseType_t xIsConnected = pdFALSE;

    if (xSemaphoreTake(xNuWiFi.xWifiSem, xSemaphoreWaitTicks) == pdTRUE) {
        if (ESP_WIFI_IsConnected(&xNuWiFi.xWifiObject) == pdTRUE) {
						if ( pxNetworkParams )
						{
								if( pxNetworkParams->ucSSIDLength > 0 
										&& pxNetworkParams->ucSSIDLength <= wificonfigMAX_SSID_LEN
										&& 0 == memcmp( pxNetworkParams->ucSSID, pcConnectedSSID, pxNetworkParams->ucSSIDLength )
										&& pxNetworkParams->ucSSIDLength == strlen( pcConnectedSSID ) ) 
								{
										xIsConnected = pdTRUE;
								}
						}
						else
						{            
								xIsConnected = pdTRUE;
						}
        }
        xSemaphoreGive(xNuWiFi.xWifiSem);
    }

    return xIsConnected;
}
